--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,6 +30,10 @@
   .card{
     @apply w-[300px] md:w-[300px] h-[150px] flex flex-col justify-center items-center border border-green-400 bg-white text-black rounded-2xl shadow-md shadow-amber-200 transform transition-all duration-300 hover:scale-105 hover:shadow-lg
   }
+.initial-card {
+  @apply w-15 h-15 rounded-xl bg-blue-500 text-white flex items-center justify-center font-bold text-xl;
+}
+
 
 }
 
